extracted sector and industry; need to link screens; add widgets (i.e. for showing charts, etc)

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,12 @@
+link_to (in the sidebar / top-nav) the most-recent fundamentals_history to the sidebar for the current company
+
 replace created_at entry on home-page w/ a sparkline!
 
 Move Segment/Industry to a separate model (or models).
 (optionally) route to companies from within a segment/industry
 
 setup the relationship(s) for reporting (i.e. how well-rounded is my
-portfolio)
+portfolio ..does it span a variety of industries ?!)
 
 Add a User model: for authentication as well as for setting up a
 Porfolio model :user_id, :company_id, :basis, :total_number_of_shares
